[gd_scene load_steps=4 format=3 uid="uid://d2n4g00qw1ua"]

[ext_resource type="Script" uid="uid://b3oswwsrguyar" path="res://gui/context_menu.gd" id="1_hqv6p"]
[ext_resource type="Texture2D" uid="uid://cohqeh37sychv" path="res://resources/icons/white/delete.png" id="1_t6t3t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t6t3t"]
bg_color = Color(0.319255, 0.319255, 0.319255, 1)

[node name="ContextMenu" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_t6t3t")
script = ExtResource("1_hqv6p")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NameButton" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "abc"

[node name="FormulaButton" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "f(x)"

[node name="AutoButton" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "auto"

[node name="DeleteButton" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture_normal = ExtResource("1_t6t3t")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="HBoxContainer/NameButton" to="." method="_on_name_button_pressed"]
[connection signal="pressed" from="HBoxContainer/FormulaButton" to="." method="_on_formula_button_pressed"]
[connection signal="pressed" from="HBoxContainer/AutoButton" to="." method="_on_auto_button_pressed"]
[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
